{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 185,
  "lineage": "900b09bc-0006-2feb-efdf-7613c333cbce",
  "resources": [
    {
      "module": "module.eks-cluster-with-import-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastionIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc484b7d0d4f9005",
            "association_id": "eipassoc-00b8714963a3fc259",
            "domain": "vpc",
            "id": "eipalloc-0bc484b7d0d4f9005",
            "instance": "i-0c50155d1329746cb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03f7057b583f93608",
            "private_dns": "ip-10-0-0-202.ec2.internal",
            "private_ip": "10.0.0.202",
            "public_dns": "ec2-44-194-252-225.compute-1.amazonaws.com",
            "public_ip": "44.194.252.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.aws_security_group.allow_ssl",
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.public",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster-with-import-vpc.module.ec2_instance.aws_iam_instance_profile.this",
            "module.eks-cluster-with-import-vpc.module.ec2_instance.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.ec2_instance.aws_instance.this",
            "module.eks-cluster-with-import-vpc.module.ec2_instance.aws_spot_instance_request.this",
            "module.eks-cluster-with-import-vpc.module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.ec2_instance.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.ec2_instance.data.aws_ssm_parameter.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:security-group/sg-0c313d1ba8fb87067",
            "description": "Allow ssl inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c313d1ba8fb87067",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSL from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssl",
            "name_prefix": "",
            "owner_id": "411309562081",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssl"
            },
            "tags_all": {
              "Name": "allow_ssl"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404837b5d107024c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:security-group/sg-0a1cb7ab132f4ed83",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce1dbfe5753f6deb"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce1dbfe5753f6deb"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-0a1cb7ab132f4ed83",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce1dbfe5753f6deb"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eclipz-sndbx-devops-eks-cluster-20221117074713304100000004",
            "name_prefix": "eclipz-sndbx-devops-eks-cluster-",
            "owner_id": "411309562081",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eclipz-sndbx-devops-eks-cluster",
              "created-by": "Terraform v1.0.1",
              "environment": "sndbx",
              "name": "eclipz-sndbx-devops-eks",
              "org": "",
              "resource": "eks",
              "tenant": "eclipz",
              "zone": "devops"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-eks-cluster",
              "created-by": "Terraform v1.0.1",
              "environment": "sndbx",
              "name": "eclipz-sndbx-devops-eks",
              "org": "",
              "resource": "eks",
              "tenant": "eclipz",
              "zone": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404837b5d107024c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:security-group/sg-0ce1dbfe5753f6deb",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DB egress to Kubernetes API",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1cb7ab132f4ed83"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-0ce1dbfe5753f6deb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DB ingress to Kubernetes API",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1cb7ab132f4ed83"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1cb7ab132f4ed83"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "eclipz-sndbx-devops-eks-node-20221117074713254200000003",
            "name_prefix": "eclipz-sndbx-devops-eks-node-",
            "owner_id": "411309562081",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eclipz-sndbx-devops-eks-node",
              "created-by": "Terraform v1.0.1",
              "environment": "sndbx",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "owned",
              "name": "eclipz-sndbx-devops-eks",
              "org": "",
              "resource": "eks",
              "tenant": "eclipz",
              "zone": "devops"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-eks-node",
              "created-by": "Terraform v1.0.1",
              "environment": "sndbx",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "owned",
              "name": "eclipz-sndbx-devops-eks",
              "org": "",
              "resource": "eks",
              "tenant": "eclipz",
              "zone": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404837b5d107024c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1790650625",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a1cb7ab132f4ed83",
            "self": false,
            "source_security_group_id": "sg-0ce1dbfe5753f6deb",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2380772842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a1cb7ab132f4ed83",
            "self": false,
            "source_security_group_id": "sg-0ce1dbfe5753f6deb",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3974842700",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a1cb7ab132f4ed83",
            "self": false,
            "source_security_group_id": "sg-0ce1dbfe5753f6deb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4118978837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce1dbfe5753f6deb",
            "self": false,
            "source_security_group_id": "sg-0a1cb7ab132f4ed83",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-3573310361",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce1dbfe5753f6deb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-186801799",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce1dbfe5753f6deb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-1975286666",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ce1dbfe5753f6deb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-154254325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce1dbfe5753f6deb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2270574995",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ce1dbfe5753f6deb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4212852887",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce1dbfe5753f6deb",
            "self": false,
            "source_security_group_id": "sg-0a1cb7ab132f4ed83",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1121301283",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce1dbfe5753f6deb",
            "self": false,
            "source_security_group_id": "sg-0a1cb7ab132f4ed83",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1448670683",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce1dbfe5753f6deb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4060567092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ce1dbfe5753f6deb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "node_db_egress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "DB egress to Kubernetes API",
            "from_port": 5432,
            "id": "sgrule-3474367176",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce1dbfe5753f6deb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "node_db_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "DB ingress to Kubernetes API",
            "from_port": 5432,
            "id": "sgrule-647663866",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce1dbfe5753f6deb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d9fa90da7950925",
            "association_id": "eipassoc-02e6ec85b8c7e27d1",
            "domain": "vpc",
            "id": "eipalloc-02d9fa90da7950925",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bb7916bf959a9849",
            "private_dns": "ip-10-0-0-176.ec2.internal",
            "private_ip": "10.0.0.176",
            "public_dns": "ec2-3-83-19-134.compute-1.amazonaws.com",
            "public_ip": "3.83.19.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eclipz-sndbx-devops-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:internet-gateway/igw-0c81384b8f2aaf31b",
            "id": "igw-0c81384b8f2aaf31b",
            "owner_id": "411309562081",
            "tags": {
              "Name": "eclipz-sndbx-devops-vpc"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-vpc"
            },
            "vpc_id": "vpc-0404837b5d107024c"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d9fa90da7950925",
            "connectivity_type": "public",
            "id": "nat-0f1cc7798ee8ac0a1",
            "network_interface_id": "eni-0bb7916bf959a9849",
            "private_ip": "10.0.0.176",
            "public_ip": "3.83.19.134",
            "subnet_id": "subnet-08a945580ae4da171",
            "tags": {
              "Name": "eclipz-sndbx-devops-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_eip.nat",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_internet_gateway.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.public",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-009e0b7e6128db5b11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f1cc7798ee8ac0a1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-009e0b7e6128db5b1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_eip.nat",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_internet_gateway.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_nat_gateway.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_route_table.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.public",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c81384b8f2aaf31b",
            "id": "r-rtb-0334277bd0ed7c1d91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0334277bd0ed7c1d9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_internet_gateway.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_route_table.public",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:route-table/rtb-009e0b7e6128db5b1",
            "id": "rtb-009e0b7e6128db5b1",
            "owner_id": "411309562081",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f1cc7798ee8ac0a1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eclipz-sndbx-devops-vpc-private"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404837b5d107024c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:route-table/rtb-0334277bd0ed7c1d9",
            "id": "rtb-0334277bd0ed7c1d9",
            "owner_id": "411309562081",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c81384b8f2aaf31b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eclipz-sndbx-devops-vpc-public"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404837b5d107024c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093d470460a754f55",
            "route_table_id": "rtb-009e0b7e6128db5b1",
            "subnet_id": "subnet-04a4f30bbba6ac904"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_route_table.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058d19e6d28f775d1",
            "route_table_id": "rtb-009e0b7e6128db5b1",
            "subnet_id": "subnet-041f62c3f1c166d60"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_route_table.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6d60cbfe3a39917",
            "route_table_id": "rtb-009e0b7e6128db5b1",
            "subnet_id": "subnet-0ecb0848e1fe9d6e3"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_route_table.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fc09946db326e16",
            "route_table_id": "rtb-0334277bd0ed7c1d9",
            "subnet_id": "subnet-08a945580ae4da171"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_route_table.public",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.public",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c9a3526b56fb683",
            "route_table_id": "rtb-0334277bd0ed7c1d9",
            "subnet_id": "subnet-0fc4fa0e2936ec663"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_route_table.public",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.public",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009d4f1098917e6ad",
            "route_table_id": "rtb-0334277bd0ed7c1d9",
            "subnet_id": "subnet-02037a78615234cf2"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_route_table.public",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.public",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:subnet/subnet-04a4f30bbba6ac904",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a4f30bbba6ac904",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411309562081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eclipz-sndbx-devops-vpc-private-us-east-1a",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-vpc-private-us-east-1a",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0404837b5d107024c"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:subnet/subnet-041f62c3f1c166d60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041f62c3f1c166d60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411309562081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eclipz-sndbx-devops-vpc-private-us-east-1b",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-vpc-private-us-east-1b",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0404837b5d107024c"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:subnet/subnet-0ecb0848e1fe9d6e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecb0848e1fe9d6e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411309562081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eclipz-sndbx-devops-vpc-private-us-east-1c",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-vpc-private-us-east-1c",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0404837b5d107024c"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:subnet/subnet-08a945580ae4da171",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a945580ae4da171",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "411309562081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eclipz-sndbx-devops-vpc-public-us-east-1a",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-vpc-public-us-east-1a",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0404837b5d107024c"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:subnet/subnet-0fc4fa0e2936ec663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc4fa0e2936ec663",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "411309562081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eclipz-sndbx-devops-vpc-public-us-east-1b",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-vpc-public-us-east-1b",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0404837b5d107024c"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:subnet/subnet-02037a78615234cf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02037a78615234cf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "411309562081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eclipz-sndbx-devops-vpc-public-us-east-1c",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-vpc-public-us-east-1c",
              "kubernetes.io/cluster/eclipz-sndbx-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0404837b5d107024c"
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411309562081:vpc/vpc-0404837b5d107024c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057f3a1834ac2affb",
            "default_route_table_id": "rtb-087103fff9ebbb39b",
            "default_security_group_id": "sg-08cf408cc8b02cbd3",
            "dhcp_options_id": "dopt-0f45ffa4a7445290d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0404837b5d107024c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087103fff9ebbb39b",
            "owner_id": "411309562081",
            "tags": {
              "Name": "eclipz-sndbx-devops-vpc"
            },
            "tags_all": {
              "Name": "eclipz-sndbx-devops-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:411309562081:instance/i-0c50155d1329746cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c50155d1329746cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Elviskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-03f7057b583f93608",
            "private_dns": "ip-10-0-0-202.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.202",
            "public_dns": "ec2-44-194-252-225.compute-1.amazonaws.com",
            "public_ip": "44.194.252.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060f7236d6ac7d808",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a945580ae4da171",
            "tags": {
              "Name": "bastion_host"
            },
            "tags_all": {
              "Name": "bastion_host"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "bastion_host"
            },
            "vpc_security_group_ids": [
              "sg-0c313d1ba8fb87067"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.aws_security_group.allow_ssl",
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.public",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster-with-import-vpc.module.ec2_instance.aws_iam_instance_profile.this",
            "module.eks-cluster-with-import-vpc.module.ec2_instance.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.ec2_instance.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.ec2_instance.data.aws_ssm_parameter.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.argocd[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "module.eks-cluster-with-import-vpc.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "terraform-eks-blueprints"
                },
                "name": "argocd",
                "resource_version": "1869",
                "uid": "b566a1e1-f39e-4687-8b64-95a466273ca4"
              }
            ]
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_policy_document.eks_key",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_session_context.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.http.eks_cluster_readiness",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.amazon_vpc_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.aws_auth",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_addon.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_cluster.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_identity_provider_config.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.tls_certificate.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_eks_fargate_profile.eks_fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_policy.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role.fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.fargate_pod_execution_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.fargate_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_eks_node_group.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_instance_profile.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEC2ContainerRegistryReadOnly",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKSWorkerNodePolicy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKS_CNI_Policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonSSMManagedInstanceCore",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_launch_template.managed_node_groups",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.data.aws_iam_policy_document.managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_autoscaling_group.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_instance_profile.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_policy.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_ami.predefined",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.self_managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster_auth.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_policy.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.platform_team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_sa_irsa",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_eks_cluster.eks_cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_iam_policy_document.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubectl_manifest.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_namespace.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_compute_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_object_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_service_account.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_managed_prometheus.aws_prometheus_workspace.amp_workspace",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_policy.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role_policy_attachment.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_assume_role",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_on_eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_namespace.spark",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role_binding.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.null_resource.update_trust_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_alias.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_key.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.argocd.data.aws_secretsmanager_secret.admin_password",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.argocd.data.aws_secretsmanager_secret_version.admin_password_version"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.aws_load_balancer_controller[0]",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "addons_ingress",
      "provider": "module.eks-cluster-with-import-vpc.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "prometheus/apps-ingress",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/backend-protocol": "HTTP",
                  "alb.ingress.kubernetes.io/group.name": "myingresses",
                  "alb.ingress.kubernetes.io/group.order": "1",
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "kubernetes.io/ingress.class": "alb"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "apps-ingress",
                "namespace": "prometheus",
                "resource_version": "2907776",
                "uid": "48cfd89d-04ad-4acc-a04a-3818339123b8"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "prom.awssolutionsprovider.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "prometheus-server",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [],
                    "secret_name": "tls-secret"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-myingresses-337b4f7886-1008022949.us-east-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_policy_document.eks_key",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_session_context.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.http.eks_cluster_readiness",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.amazon_vpc_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.aws_auth",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_addon.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_cluster.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_identity_provider_config.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.tls_certificate.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_eks_fargate_profile.eks_fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_policy.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role.fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.fargate_pod_execution_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.fargate_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_eks_node_group.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_instance_profile.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEC2ContainerRegistryReadOnly",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKSWorkerNodePolicy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKS_CNI_Policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonSSMManagedInstanceCore",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_launch_template.managed_node_groups",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.data.aws_iam_policy_document.managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_autoscaling_group.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_instance_profile.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_policy.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_ami.predefined",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.self_managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster_auth.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_policy.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.platform_team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_sa_irsa",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_eks_cluster.eks_cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_iam_policy_document.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubectl_manifest.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_namespace.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_compute_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_object_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_service_account.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_managed_prometheus.aws_prometheus_workspace.amp_workspace",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_policy.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role_policy_attachment.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_assume_role",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_on_eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_namespace.spark",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role_binding.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.null_resource.update_trust_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_alias.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_key.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.aws_load_balancer_controller[0]",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "addons_ingress2",
      "provider": "module.eks-cluster-with-import-vpc.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/apps-ingress2",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/backend-protocol": "HTTP",
                  "alb.ingress.kubernetes.io/group.name": "myingresses",
                  "alb.ingress.kubernetes.io/group.order": "2",
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "kubernetes.io/ingress.class": "alb"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "apps-ingress2",
                "namespace": "argocd",
                "resource_version": "2907765",
                "uid": "794d11b7-7189-4c14-a4fd-77043418f8c6"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "grafana.awssolutionsprovider.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "vault-ui",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8200
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [],
                    "secret_name": "tls-secret"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-myingresses-337b4f7886-1008022949.us-east-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_policy_document.eks_key",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_session_context.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.http.eks_cluster_readiness",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.amazon_vpc_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.aws_auth",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_addon.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_cluster.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_identity_provider_config.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.tls_certificate.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_eks_fargate_profile.eks_fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_policy.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role.fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.fargate_pod_execution_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.fargate_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_eks_node_group.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_instance_profile.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEC2ContainerRegistryReadOnly",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKSWorkerNodePolicy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKS_CNI_Policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonSSMManagedInstanceCore",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_launch_template.managed_node_groups",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.data.aws_iam_policy_document.managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_autoscaling_group.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_instance_profile.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_policy.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_ami.predefined",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.self_managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster_auth.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_policy.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.platform_team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_sa_irsa",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_eks_cluster.eks_cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_iam_policy_document.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubectl_manifest.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_namespace.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_compute_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_object_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_service_account.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_managed_prometheus.aws_prometheus_workspace.amp_workspace",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_policy.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role_policy_attachment.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_assume_role",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_on_eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_namespace.spark",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role_binding.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.null_resource.update_trust_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_alias.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_key.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.aws_load_balancer_controller[0]",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "addons_ingress3",
      "provider": "module.eks-cluster-with-import-vpc.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "grafana/apps-ingress3",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/backend-protocol": "HTTP",
                  "alb.ingress.kubernetes.io/group.name": "myingresses",
                  "alb.ingress.kubernetes.io/group.order": "3",
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "kubernetes.io/ingress.class": "alb"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "apps-ingress3",
                "namespace": "grafana",
                "resource_version": "3454341",
                "uid": "e4188905-a8a5-4008-bec8-f74ddb12c146"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "graf.awssolutionsprovider.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "grafana",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": null,
                    "secret_name": "tls-secret"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_policy_document.eks_key",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_session_context.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.http.eks_cluster_readiness",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.amazon_vpc_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.aws_auth",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_addon.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_cluster.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_identity_provider_config.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.tls_certificate.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_eks_fargate_profile.eks_fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_policy.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role.fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.fargate_pod_execution_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.fargate_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_eks_node_group.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_instance_profile.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEC2ContainerRegistryReadOnly",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKSWorkerNodePolicy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKS_CNI_Policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonSSMManagedInstanceCore",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_launch_template.managed_node_groups",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.data.aws_iam_policy_document.managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_autoscaling_group.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_instance_profile.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_policy.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_ami.predefined",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.self_managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster_auth.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_policy.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.platform_team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_sa_irsa",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_eks_cluster.eks_cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_iam_policy_document.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubectl_manifest.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_namespace.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_compute_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_object_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_service_account.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_managed_prometheus.aws_prometheus_workspace.amp_workspace",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_policy.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role_policy_attachment.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_assume_role",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_on_eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_namespace.spark",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role_binding.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.null_resource.update_trust_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_alias.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_key.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.grafana[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "module.eks-cluster-with-import-vpc.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "grafana",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "terraform-eks-blueprints"
                },
                "name": "grafana",
                "resource_version": "1896",
                "uid": "749169c8-928c-4d16-b1c2-822ec36a0251"
              }
            ]
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_policy_document.eks_key",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_session_context.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.http.eks_cluster_readiness",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.amazon_vpc_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.aws_auth",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_addon.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_cluster.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_identity_provider_config.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.tls_certificate.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_eks_fargate_profile.eks_fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_policy.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role.fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.fargate_pod_execution_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.fargate_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_eks_node_group.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_instance_profile.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEC2ContainerRegistryReadOnly",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKSWorkerNodePolicy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKS_CNI_Policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonSSMManagedInstanceCore",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_launch_template.managed_node_groups",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.data.aws_iam_policy_document.managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_autoscaling_group.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_instance_profile.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_policy.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_ami.predefined",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.self_managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster_auth.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_policy.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.platform_team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_sa_irsa",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_eks_cluster.eks_cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_iam_policy_document.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubectl_manifest.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_namespace.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_compute_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_object_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_service_account.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_managed_prometheus.aws_prometheus_workspace.amp_workspace",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_policy.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role_policy_attachment.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_assume_role",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_on_eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_namespace.spark",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role_binding.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.null_resource.update_trust_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_alias.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_key.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.data.aws_eks_cluster.eks_cluster",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.grafana.aws_iam_policy.grafana",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.grafana.data.aws_iam_policy_document.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.ingress_nginx[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "module.eks-cluster-with-import-vpc.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "nginx",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "terraform-eks-blueprints"
                },
                "name": "nginx",
                "resource_version": "1868",
                "uid": "8768db86-b556-4eeb-b78c-5bf69ac016ee"
              }
            ]
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_policy_document.eks_key",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_session_context.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.http.eks_cluster_readiness",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.amazon_vpc_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.aws_auth",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_addon.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_cluster.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_identity_provider_config.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.tls_certificate.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_eks_fargate_profile.eks_fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_policy.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role.fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.fargate_pod_execution_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.fargate_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_eks_node_group.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_instance_profile.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEC2ContainerRegistryReadOnly",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKSWorkerNodePolicy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKS_CNI_Policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonSSMManagedInstanceCore",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_launch_template.managed_node_groups",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.data.aws_iam_policy_document.managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_autoscaling_group.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_instance_profile.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_policy.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_ami.predefined",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.self_managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster_auth.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_policy.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.platform_team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_sa_irsa",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_eks_cluster.eks_cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_iam_policy_document.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubectl_manifest.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_namespace.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_compute_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_object_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_service_account.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_managed_prometheus.aws_prometheus_workspace.amp_workspace",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_policy.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role_policy_attachment.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_assume_role",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_on_eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_namespace.spark",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role_binding.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.null_resource.update_trust_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_alias.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_key.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.prometheus[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "prometheus",
      "provider": "module.eks-cluster-with-import-vpc.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "prometheus",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "terraform-eks-blueprints"
                },
                "name": "prometheus",
                "resource_version": "1870",
                "uid": "996d7ac9-0506-459f-86ce-ffa27c3f0a52"
              }
            ]
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_policy_document.eks_key",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_session_context.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.http.eks_cluster_readiness",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.amazon_vpc_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.aws_auth",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_addon.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_cluster.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_identity_provider_config.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.tls_certificate.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_eks_fargate_profile.eks_fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_policy.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role.fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.fargate_pod_execution_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.fargate_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_eks_node_group.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_instance_profile.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEC2ContainerRegistryReadOnly",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKSWorkerNodePolicy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKS_CNI_Policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonSSMManagedInstanceCore",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_launch_template.managed_node_groups",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.data.aws_iam_policy_document.managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_autoscaling_group.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_instance_profile.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_policy.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_ami.predefined",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.self_managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster_auth.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_policy.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.platform_team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_sa_irsa",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_eks_cluster.eks_cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_iam_policy_document.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubectl_manifest.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_namespace.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_compute_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_object_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_service_account.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_managed_prometheus.aws_prometheus_workspace.amp_workspace",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_policy.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role_policy_attachment.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_assume_role",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_on_eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_namespace.spark",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role_binding.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.null_resource.update_trust_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_alias.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_key.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.promtail[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "module.eks-cluster-with-import-vpc.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "promtail",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "terraform-eks-blueprints"
                },
                "name": "promtail",
                "resource_version": "1898",
                "uid": "9bb330a8-6f2d-4683-8cb5-23b4ce5b26c3"
              }
            ]
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_policy_document.eks_key",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_session_context.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.http.eks_cluster_readiness",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.amazon_vpc_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.aws_auth",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_addon.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_cluster.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_identity_provider_config.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.tls_certificate.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_eks_fargate_profile.eks_fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_policy.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role.fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.fargate_pod_execution_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.fargate_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_eks_node_group.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_instance_profile.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEC2ContainerRegistryReadOnly",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKSWorkerNodePolicy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKS_CNI_Policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonSSMManagedInstanceCore",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_launch_template.managed_node_groups",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.data.aws_iam_policy_document.managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_autoscaling_group.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_instance_profile.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_policy.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_ami.predefined",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.self_managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster_auth.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_policy.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.platform_team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_sa_irsa",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_eks_cluster.eks_cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_iam_policy_document.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubectl_manifest.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_namespace.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_compute_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_object_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_service_account.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_managed_prometheus.aws_prometheus_workspace.amp_workspace",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_policy.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role_policy_attachment.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_assume_role",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_on_eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_namespace.spark",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role_binding.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.null_resource.update_trust_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_alias.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_key.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.data.aws_eks_cluster.eks_cluster",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.promtail.aws_iam_policy.promtail",
            "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.promtail.data.aws_iam_policy_document.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster-with-import-vpc.module.kubernetes-addons.module.tetrate_istio[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "istio",
      "provider": "module.eks-cluster-with-import-vpc.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "istio-system",
            "metadata": [
              {
                "generation": 0,
                "name": "istio-system",
                "resource_version": "1867",
                "uid": "cfafa76d-7139-4c5a-b224-88eb5f797dda"
              }
            ]
          },
          "dependencies": [
            "module.eks-cluster-with-import-vpc.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_availability_zones.available",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_eks_cluster_auth.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_policy_document.eks_key",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_iam_session_context.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.data.http.eks_cluster_readiness",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.amazon_vpc_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.kubernetes_config_map.aws_auth",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_addon.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_cluster.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_eks_identity_provider_config.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group_rule.node",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.data.tls_certificate.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.fargate_profile.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_eks_fargate_profile.eks_fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_policy.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role.fargate",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.fargate_pod_execution_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.cwlogs",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.fargate_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_eks_node_group.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_instance_profile.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEC2ContainerRegistryReadOnly",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKSWorkerNodePolicy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonEKS_CNI_Policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng_AmazonSSMManagedInstanceCore",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.aws_launch_template.managed_node_groups",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_managed_node_groups.data.aws_iam_policy_document.managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_autoscaling_group.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_instance_profile.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_policy.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.self_managed_ng",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_ami.predefined",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.eks_windows_cni",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.self_managed_ng_assume_role_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.aws_launch_template.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster_auth.eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_policy.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.platform_team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.aws_iam_role.team_sa_irsa",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_eks_cluster.eks_cluster",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_iam_policy_document.platform_team_eks_access",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubectl_manifest.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_cluster_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_namespace.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_compute_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_resource_quota.team_object_quota",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_role_binding.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_eks_teams.kubernetes_service_account.team",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.aws_managed_prometheus.aws_prometheus_workspace.amp_workspace",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_policy.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.aws_iam_role_policy_attachment.emr_on_eks_execution",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_caller_identity.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_assume_role",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_iam_policy_document.emr_on_eks",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_partition.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.data.aws_region.current",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_namespace.spark",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.kubernetes_role_binding.emr_containers",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.emr_on_eks.null_resource.update_trust_policy",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_alias.this",
            "module.eks-cluster-with-import-vpc.module.aws-eks-accelerator-for-terraform.module.kms.aws_kms_key.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_subnet.private",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc.this",
            "module.eks-cluster-with-import-vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    }
  ]
}